[gd_scene format=4 uid="uid://b6mbmer46xsrl"]

[ext_resource type="Script" uid="uid://d6ek54osxg67" path="res://ui/ui.gd" id="1_34ysx"]
[ext_resource type="Script" uid="uid://d0trjwhh2it35" path="res://scenes/main/camera_controller.gd" id="1_m2hkn"]
[ext_resource type="StyleBox" uid="uid://cf5fvya78qog8" path="res://ui/ui_elment_background.tres" id="1_pk2e0"]
[ext_resource type="Script" uid="uid://dub5cdr74rfmr" path="res://scenes/main/mouse_input_handler.gd" id="1_updxt"]
[ext_resource type="Texture2D" uid="uid://dqj5fa7kanbyc" path="res://ui/mouse_left.svg" id="2_6g2b4"]
[ext_resource type="Script" uid="uid://c3calseoe5271" path="res://scenes/main/cooking_controller.gd" id="2_47a2x"]
[ext_resource type="PackedScene" uid="uid://bl2jv1csyq2mg" path="res://scenes/pots_n_pans/pot/pot.tscn" id="2_v28j4"]
[ext_resource type="Texture2D" uid="uid://cm2lx652xxsua" path="res://ui/mouse_scroll.svg" id="3_eu2w8"]
[ext_resource type="PackedScene" uid="uid://datqj8xbewutu" path="res://scenes/pots_n_pans/tasting_spoon.tscn" id="5_hrrd4"]
[ext_resource type="Texture2D" uid="uid://bo2524kt3kx7k" path="res://ui/rotate_ccw.svg" id="5_vi6iu"]
[ext_resource type="Script" uid="uid://dm8yyqmshpxdm" path="res://scenes/pots_n_pans/view_collision_boundary.gd" id="6_xnjwu"]
[ext_resource type="Script" uid="uid://c8pu7rwc28hd0" path="res://scenes/main/food_spawn.gd" id="8_jq2de"]
[ext_resource type="Material" uid="uid://bp2mad7igbxs4" path="res://scenes/main/materials/wall_material.tres" id="8_nvumn"]
[ext_resource type="PackedScene" uid="uid://xl34pi4pvsuj" path="res://scenes/pots_n_pans/stove/stove.tscn" id="10_ndaen"]
[ext_resource type="PackedScene" uid="uid://cf5qjssu2jva2" path="res://scenes/eating_robot/eating_robot.tscn" id="11_8jsdd"]
[ext_resource type="Script" uid="uid://di7k87roi3tda" path="res://scenes/pots_n_pans/food_kill_zone.gd" id="16_hwmsb"]
[ext_resource type="Shader" uid="uid://yfljavsf7w01" path="res://scenes/main/materials/wood_shader.tres" id="17_ou6is"]

[sub_resource type="Environment" id="Environment_d8w4m"]
background_mode = 1
background_color = Color(0.772824, 0.870527, 0.949187, 1)
ambient_light_source = 2
ambient_light_color = Color(0.2990358, 0.09577642, 0, 1)
reflected_light_source = 1
ssao_enabled = true
ssao_intensity = 0.7
adjustment_enabled = true
adjustment_contrast = 0.9
adjustment_saturation = 1.1

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_ubpce"]

[sub_resource type="PlaneMesh" id="PlaneMesh_necax"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pg34l"]
render_priority = 0
shader = ExtResource("17_ou6is")
shader_parameter/wood_color = Color(0.43548256, 0.27809674, 0.20439252, 1)
shader_parameter/grain_color = Color(0.4924972, 0.31849778, 0.23709118, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_nvumn"]
size = Vector3(2, 8.516125, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_necax"]
size = Vector3(2, 0.1489375, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b87k3"]
resource_name = "stub"
cull_mode = 2
albedo_color = Color(0.9063318, 0.9063318, 0.9063318, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_ffvy4"]
_surfaces = [{
"aabb": AABB(-3.5117264, -0.07617742, -0.07617748, 7.0234528, 0.14140134, 0.14140141),
"format": 34896613377,
"index_count": 48,
"index_data": PackedByteArray("AAABAAIAAQADAAIABAACAAMABAAAAAIAAQAFAAMABQAEAAMAAQAGAAUABQAGAAQAAAAHAAEAAQAIAAYACAABAAcACAAEAAYAAAAIAAcACAAJAAQAAAAEAAkAAAAJAAgA"),
"name": "stub",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 10,
"vertex_data": PackedByteArray("AAAAAAAAAAD/////AAAAAAAA//8AAAAAAAD//5KxAAAAAJKx//8AAP////+SsQAA//+Ssf//AAD//wAAAAAAAP//AAD//wAAAAAAAP//AAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_j70lr"]
resource_name = "bevel_Cube_001"
_surfaces = [{
"aabb": AABB(-3.5117264, -0.07617742, -0.07617748, 7.0234528, 0.14140134, 0.14140141),
"attribute_data": PackedByteArray("/1//v/+f/3//n/+//1//f/8f/3//X/8//1//f/8f/z//n4VPZIwAAP+fAABkjP8//1//P2SMAABkjP8//18AAP9f/79kjP///1////+f/7//n2Ts/5//f//fmlP/3/9//5+FT/9f/z//n/9//1//f2SM/z//n4VP"),
"format": 34896613399,
"index_count": 48,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEQAQABMAEQATABQAFQAWABcAFQAYABYAGQAaABsAGgAZABwAGgAcAB0A"),
"material": SubResource("StandardMaterial3D_b87k3"),
"name": "stub",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 30,
"vertex_data": PackedByteArray("AAAAAAAA////////AAD//wAA//8AAP////8AAAAA//8AAAAAAAD/v///AAD///+///8AAAAA/78AAAAA////v/////+SsW7+AACSsf//LsYAAP//krH8xf//krH//6T+//8AAP///78AAJKx////v///krH///+/AAAAAP///78AAAAAAABU1QAAkrH//1TVAAAAAP//VNUAAP//AABU1QAA//+SsVTV/////wAA9v8AAP//krH//wAA//8AAP///////5Kx9v///wAA//9U1f////8AACfU//8AAAAAVNX//5Kx//8K1P////+SsVPP/7//v/+//7//v/+//7//vwAA/38AAP9/AAD/fwAA/3+72sYA9uLfHP/i/xyz2qsA/////////////////////1TVVNVU1VTVVNVU1VTVVNVU1VTVCID6v/9//7//f/+/CID6v6oqqiodLPEpqiqqKkAs3ym0MqUm")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ffvy4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m4h2d"]
diffuse_mode = 3
albedo_color = Color(0.109922744, 0.070832945, 0.051628, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ou6is"]
size = Vector3(2, 0.14258984, 2)

[sub_resource type="SphereShape3D" id="SphereShape3D_ox7ci"]
radius = 0.25

[sub_resource type="BoxShape3D" id="BoxShape3D_dxv86"]
size = Vector3(49.879, 1, 45.8506)

[node name="Main" type="Node3D" unique_id=174132740]

[node name="UI" type="Control" parent="." unique_id=2143838390]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_34ysx")

[node name="MarginContainer" type="MarginContainer" parent="UI" unique_id=1435661265]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="FoodLabel" type="Label" parent="UI/MarginContainer" unique_id=154897731]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = ExtResource("1_pk2e0")
text = "Food"

[node name="HelpTextContainer" type="PanelContainer" parent="UI/MarginContainer" unique_id=707808069]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("1_pk2e0")

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer/HelpTextContainer" unique_id=219688270]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/HelpTextContainer/MarginContainer" unique_id=2072673448]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="HBoxContainerSpeed" type="HBoxContainer" parent="UI/MarginContainer/HelpTextContainer/MarginContainer/VBoxContainer" unique_id=930986881]
layout_mode = 2

[node name="MouseLeft" type="TextureRect" parent="UI/MarginContainer/HelpTextContainer/MarginContainer/VBoxContainer/HBoxContainerSpeed" unique_id=1019516855]
layout_mode = 2
texture = ExtResource("2_6g2b4")

[node name="SpeedUpHint" type="Label" parent="UI/MarginContainer/HelpTextContainer/MarginContainer/VBoxContainer/HBoxContainerSpeed" unique_id=1231687864]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Speed up"

[node name="HBoxContainerScroll" type="HBoxContainer" parent="UI/MarginContainer/HelpTextContainer/MarginContainer/VBoxContainer" unique_id=1444087929]
layout_mode = 2

[node name="MouseWheel" type="TextureRect" parent="UI/MarginContainer/HelpTextContainer/MarginContainer/VBoxContainer/HBoxContainerScroll" unique_id=496619499]
layout_mode = 2
texture = ExtResource("3_eu2w8")

[node name="ScrollHint" type="Label" parent="UI/MarginContainer/HelpTextContainer/MarginContainer/VBoxContainer/HBoxContainerScroll" unique_id=2006656194]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Scroll text"

[node name="ResetButton" type="TextureButton" parent="UI" unique_id=692646682]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
texture_normal = ExtResource("5_vi6iu")

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=1570823535]
environment = SubResource("Environment_d8w4m")
camera_attributes = SubResource("CameraAttributesPractical_ubpce")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment" unique_id=1441364428]
transform = Transform3D(1, 0, 0, 0, 0.56256, 0.826757, 0, -0.826757, 0.56256, 0, 20.3815, 0)

[node name="ViewCollisionBoundary" type="Node3D" parent="." unique_id=924010748]
unique_name_in_owner = true
script = ExtResource("6_xnjwu")

[node name="TableTop" type="Node3D" parent="." unique_id=985079941]
transform = Transform3D(5, 0, 0, 0, 0.012, 0, 0, 0, 2.5, 0, -0.039, -0.751)

[node name="StaticBody3D" type="StaticBody3D" parent="TableTop" unique_id=2086497709]
collision_layer = 11

[node name="floor" type="MeshInstance3D" parent="TableTop/StaticBody3D" unique_id=1832037969]
mesh = SubResource("PlaneMesh_necax")
surface_material_override/0 = SubResource("ShaderMaterial_pg34l")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TableTop/StaticBody3D" unique_id=873201744]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1.0000002, 0, -4.2575626, 0)
shape = SubResource("BoxShape3D_nvumn")

[node name="Walls" type="Node3D" parent="." unique_id=692096391]

[node name="LeftWall" type="Node3D" parent="Walls" unique_id=1604819088]
transform = Transform3D(-7.824338e-08, 0, 1, 0, 1, 0, -1.79, 0, -4.371139e-08, -2.945, 0, -0.657)

[node name="StaticBody3D" type="StaticBody3D" parent="Walls/LeftWall" unique_id=843206915]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/LeftWall/StaticBody3D" unique_id=97878814]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0.755, -0.07396865)
shape = SubResource("BoxShape3D_necax")

[node name="wall" type="MeshInstance3D" parent="Walls/LeftWall" unique_id=105696011]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0.755, 0)
mesh = SubResource("PlaneMesh_necax")
surface_material_override/0 = ExtResource("8_nvumn")

[node name="bevel" type="MeshInstance3D" parent="Walls/LeftWall" unique_id=147944069]
transform = Transform3D(0.285, 0, 0, 0, 0.8, -3.0198067e-15, 0, 2.842171e-15, 0.85, 0, -0.04, 0)
mesh = SubResource("ArrayMesh_j70lr")
surface_material_override/0 = SubResource("StandardMaterial3D_m4h2d")

[node name="BackWall" type="Node3D" parent="Walls" unique_id=1118091441]
transform = Transform3D(4.01, 0, 0, 0, 1, 0, 0, 0, 1, 0.635, 0, -1.782)

[node name="StaticBody3D" type="StaticBody3D" parent="Walls/BackWall" unique_id=464260716]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/BackWall/StaticBody3D" unique_id=432355278]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0.755, -0.07079494)
shape = SubResource("BoxShape3D_ou6is")

[node name="wall" type="MeshInstance3D" parent="Walls/BackWall" unique_id=1692489201]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0.755, 0)
mesh = SubResource("PlaneMesh_necax")
surface_material_override/0 = ExtResource("8_nvumn")

[node name="bevel" type="MeshInstance3D" parent="Walls/BackWall" unique_id=143740758]
transform = Transform3D(0.285, 0, 0, 0, 0.8, -3.0198067e-15, 0, 2.842171e-15, 0.85, 0, -0.04, 0)
mesh = SubResource("ArrayMesh_j70lr")
surface_material_override/0 = SubResource("StandardMaterial3D_m4h2d")

[node name="CameraRig" type="Node3D" parent="." unique_id=159541413]
unique_name_in_owner = true
script = ExtResource("1_m2hkn")

[node name="Camera3D" type="Camera3D" parent="CameraRig" unique_id=1008747647]
transform = Transform3D(1, 0, 0, 0, 0.475624, 0.879649, 0, -0.879649, 0.475624, 0, 1.747, 0.461)

[node name="StartMarker" type="Marker3D" parent="CameraRig" unique_id=1456776924]
transform = Transform3D(1, 0, 0, 0, 0.475624, 0.879649, 0, -0.879649, 0.475624, 0, 1.747, 0.461)

[node name="EndMarker" type="Marker3D" parent="CameraRig" unique_id=992821059]
transform = Transform3D(0.712026, -0.0245048, 0.701725, 0, 0.999391, 0.0348995, -0.702153, -0.0248494, 0.711592, -1.057, 0.446, -0.528)

[node name="FoodDragHandler" type="Node3D" parent="." unique_id=1319341955]
unique_name_in_owner = true
script = ExtResource("1_updxt")

[node name="PotRimElevation" type="Marker3D" parent="FoodDragHandler" unique_id=1964500437]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.649624, 0)
gizmo_extents = 0.35

[node name="DragFoodTarget" type="Marker3D" parent="FoodDragHandler" unique_id=1404800401]

[node name="Boundary" type="Area3D" parent="FoodDragHandler" unique_id=1586277336]
collision_layer = 16
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="FoodDragHandler/Boundary" unique_id=238411118]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
depth = 3.0
polygon = PackedVector2Array(-1.76292, -0.189293, -0.950156, -1.00205, -0.9588361, -1.4534688, -0.7952008, -1.6807399, 2.804771, -1.6716487, 2.986588, -1.4898322, 1.72892, 0.571314, 1.59586, 0.696975, -1.43478, 0.682191, -1.61219, 0.563922)

[node name="ElevationShapeCast3D" type="ShapeCast3D" parent="FoodDragHandler" unique_id=1183449862]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
shape = SubResource("SphereShape3D_ox7ci")
target_position = Vector3(0, -3, 0)
collision_mask = 8

[node name="CookingController" type="Node" parent="." unique_id=1430888598]
unique_name_in_owner = true
script = ExtResource("2_47a2x")

[node name="EatingRobot" parent="." unique_id=1009242642 instance=ExtResource("11_8jsdd")]
unique_name_in_owner = true
transform = Transform3D(0.213725, 0, 0.210527, 0, 0.3, 0, -0.210527, 0, 0.213725, -1.51593, 0.314378, -0.974156)

[node name="TastingSpoon" parent="." unique_id=1608685377 instance=ExtResource("5_hrrd4")]
unique_name_in_owner = true

[node name="Stove" parent="." unique_id=478622306 instance=ExtResource("10_ndaen")]
unique_name_in_owner = true

[node name="Pot" parent="." unique_id=1127825695 instance=ExtResource("2_v28j4")]
unique_name_in_owner = true
transform = Transform3D(0.694658, 0, -0.71934, 0, 1, 0, 0.71934, 0, 0.694658, 0, 0.169576, 0)

[node name="-" type="Node" parent="." unique_id=108465961]

[node name="FoodSpawn" type="Node3D" parent="." unique_id=1956924061]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.16293085)
script = ExtResource("8_jq2de")
foods_path = "res://scenes/foods/scenes/generated"
food_scale = 0.3

[node name="SpawnMarker3D1" type="Marker3D" parent="FoodSpawn" unique_id=1758326567]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.753071, 1, -0.461815)
gizmo_extents = 0.02

[node name="SpawnMarker3D2" type="Marker3D" parent="FoodSpawn" unique_id=384765757]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10592, 1, -0.000873566)
gizmo_extents = 0.02

[node name="SpawnMarker3D3" type="Marker3D" parent="FoodSpawn" unique_id=51517439]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.6876991, 1, -1.0957346)
gizmo_extents = 0.02

[node name="SpawnMarker3D4" type="Marker3D" parent="FoodSpawn" unique_id=1659872924]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.262944, 1, -0.940487)
gizmo_extents = 0.02

[node name="SpawnMarker3D5" type="Marker3D" parent="FoodSpawn" unique_id=681375105]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.332644, 1, -0.953342)
gizmo_extents = 0.02

[node name="SpawnMarker3D6" type="Marker3D" parent="FoodSpawn" unique_id=2147473498]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.968829, 1, -0.822071)
gizmo_extents = 0.02

[node name="SpawnMarker3D7" type="Marker3D" parent="FoodSpawn" unique_id=308569235]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.4790803, 1, -0.48936486)
gizmo_extents = 0.02

[node name="SpawnMarker3D8" type="Marker3D" parent="FoodSpawn" unique_id=933126566]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2677816, 1, -0.01640135)
gizmo_extents = 0.02

[node name="SpawnMarker3D9" type="Marker3D" parent="FoodSpawn" unique_id=98103979]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.17515, 1, -1.48944)
gizmo_extents = 0.02

[node name="SpawnMarker3D10" type="Marker3D" parent="FoodSpawn" unique_id=1599311702]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.422625, 1, -1.50608)
gizmo_extents = 0.02

[node name="SpawnMarker3D11" type="Marker3D" parent="FoodSpawn" unique_id=999430451]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.327216, 1, -1.4756062)
gizmo_extents = 0.02

[node name="FoodKillZone" type="Area3D" parent="." unique_id=443425492]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.93893, 0)
script = ExtResource("16_hwmsb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FoodKillZone" unique_id=978161265]
shape = SubResource("BoxShape3D_dxv86")
